@@ -4,7 +4,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
@@ -38,7 +37,7 @@ public class JWTAuthenticationConfig {
     Map<String, Object> claims = new HashMap<>();
     claims.put("authorities", grantedAuthorities.stream()
             .map(GrantedAuthority::getAuthority)
-            .collect(Collectors.toList()));
+            .toList());
 
         String token = Jwts.builder()
                 .claims()
